update: show echarts bar in detail card.

--- a/templates/job.html
+++ b/templates/job.html
@@ -85,10 +85,11 @@
               <nav id="ember395" class="option-button ember-view">
                 <button class="option-display" title="Show more options" type="button">
                   <span class="label-align">More options</span>
-                  <span class="option-tofu"><svg xmlns="http://www.w3.org/2000/svg"
-                                   viewBox="-503.7 379.2 17 10"
-                                   class="icon-tofu"><path
-                      d="M-487.3 380.4H-503c-.4 0-.6-.3-.6-.6s.3-.6.6-.6h15.7c.4 0 .6.3.6.6s-.3.6-.6.6zm0 4.4H-503c-.4 0-.6-.3-.6-.6s.3-.6.6-.6h15.7c.4 0 .6.3.6.6s-.3.6-.6.6zm0 4.4H-503c-.4 0-.6-.3-.6-.6s.3-.6.6-.6h15.7c.4 0 .6.3.6.6s-.3.6-.6.6z"></path></svg></span>
+                  <span class="option-tofu">
+                      <svg xmlns="http://www.w3.org/2000/svg"
+                           viewBox="-503.7 379.2 17 10"
+                           class="icon-tofu">
+                          <path d="M-487.3 380.4H-503c-.4 0-.6-.3-.6-.6s.3-.6.6-.6h15.7c.4 0 .6.3.6.6s-.3.6-.6.6zm0 4.4H-503c-.4 0-.6-.3-.6-.6s.3-.6.6-.6h15.7c.4 0 .6.3.6.6s-.3.6-.6.6zm0 4.4H-503c-.4 0-.6-.3-.6-.6s.3-.6.6-.6h15.7c.4 0 .6.3.6.6s-.3.6-.6.6z"></path></svg></span>
                 </button>
                 <ul class="option-dropdown">
                   <li>
@@ -125,45 +126,52 @@
                         update: show tracebacks.
                     </h2>
                     <div class="commit-info">
-
-                  <!---->    <ul class="list-icon">
+                      <ul class="list-icon">
                         <li>
-                  <a rel="noopener noreferrer" target="_blank" href="https://github.com/intest-tech/qaadmin/commit/0a5f315aace3efbd5bd9ee3b65dc52e9cabb052c" id="ember66" class="ember-view">            <!---->
-
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 17 17" class="icon"><circle cx="8.51" cy="8.5" r="3.5" fill="none" stroke="#9d9d9d" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"></circle><path d="M16.5 8.5h-4.49m-7 0H.5" fill="none" stroke="#9d9d9d" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"></path></svg>
+                          <a rel="noopener noreferrer" target="_blank" href="https://github.com/intest-tech/qaadmin/commit/0a5f315aace3efbd5bd9ee3b65dc52e9cabb052c" id="ember66" class="ember-view">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 17 17" class="icon">
+                              <circle cx="8.51" cy="8.5" r="3.5" fill="none" stroke="#9d9d9d" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"></circle>
+                              <path d="M16.5 8.5h-4.49m-7 0H.5" fill="none" stroke="#9d9d9d" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"></path>
+                            </svg>
                             <span class="label-align inner-underline commit-commit">Commit 0a5f315</span>
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 17 17" class="icon"><path d="M11.34 10.96v1.1c0 .55-.45 1-1 1H4.83c-.55 0-1-.45-1-1V6.55c0-.55.41-1 .91-1h.91m1.24 4.34l5.92-5.93m-3.9-.02h3.92v3.92" fill="none" stroke="#9d9d9d" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"></path></svg>
-
-                  </a>      </li>
-                          <li>
-                  <a rel="noopener noreferrer" target="_blank" href="https://github.com/intest-tech/qaadmin/compare/b350612bd471...0a5f315aace3" id="ember68" class="ember-view">                  <!---->
-
-                                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 17 17" class="icon"><circle cx="3.8" cy="3.2" r="1.7" fill="none" stroke="#9d9d9d" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"></circle><path d="M6.75 15.5s1.95-1.95 1.95-1.98H6.3s-2.48.15-2.48-2.46V4.92m2.93 6.64s1.95 1.95 1.95 1.97" fill="none" stroke="#9d9d9d" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"></path><g fill="none" stroke="#9d9d9d" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"><circle cx="13.2" cy="13.8" r="1.7"></circle><path d="M10.25 1.5S8.3 3.45 8.3 3.47h2.4s2.48-.15 2.48 2.46v6.14m-2.93-6.63S8.3 3.49 8.3 3.47"></path></g></svg>
-                                  <span class="label-align inner-underline commit-compare">Compare b350612..0a5f315</span>
-                                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 17 17" class="icon"><path d="M11.34 10.96v1.1c0 .55-.45 1-1 1H4.83c-.55 0-1-.45-1-1V6.55c0-.55.41-1 .91-1h.91m1.24 4.34l5.92-5.93m-3.9-.02h3.92v3.92" fill="none" stroke="#9d9d9d" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"></path></svg>
-
-                  </a>        </li>
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 17 17" class="icon">
+                              <path d="M11.34 10.96v1.1c0 .55-.45 1-1 1H4.83c-.55 0-1-.45-1-1V6.55c0-.55.41-1 .91-1h.91m1.24 4.34l5.92-5.93m-3.9-.02h3.92v3.92" fill="none" stroke="#9d9d9d" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"></path>
+                            </svg>
+                          </a>
+                        </li>
                         <li>
-                  <a rel="noopener noreferrer" target="_blank" href="https://github.com/intest-tech/qaadmin/tree/master" id="ember70" class="commit-branch-url ember-view">              <!---->
-
-                              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 17 17" class="icon"><circle cx="4.94" cy="2.83" r="1.83" fill="none" stroke="#9d9d9d" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"></circle><circle cx="11.78" cy="5.15" r="1.83" fill="none" stroke="#9d9d9d" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"></circle><circle cx="4.98" cy="14.17" r="1.83" fill="none" stroke="#9d9d9d" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"></circle><path d="M11.78 6.99s.09 2.68-1.9 3.38c-1.76.62-2.92-.04-4.93 1.97V4.66" fill="none" stroke="#9d9d9d" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"></path></svg>
-                              <span class="label-align inner-underline">Branch master</span>
-                              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 17 17" class="icon"><path d="M11.34 10.96v1.1c0 .55-.45 1-1 1H4.83c-.55 0-1-.45-1-1V6.55c0-.55.41-1 .91-1h.91m1.24 4.34l5.92-5.93m-3.9-.02h3.92v3.92" fill="none" stroke="#9d9d9d" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"></path></svg>
-
-                  </a>      </li>
+                          <a rel="noopener noreferrer" target="_blank" href="https://github.com/intest-tech/qaadmin/compare/b350612bd471...0a5f315aace3" id="ember68" class="ember-view">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 17 17" class="icon">
+                              <circle cx="3.8" cy="3.2" r="1.7" fill="none" stroke="#9d9d9d" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"></circle>
+                              <path d="M6.75 15.5s1.95-1.95 1.95-1.98H6.3s-2.48.15-2.48-2.46V4.92m2.93 6.64s1.95 1.95 1.95 1.97" fill="none" stroke="#9d9d9d" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"></path>
+                              <g fill="none" stroke="#9d9d9d" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10">
+                                <circle cx="13.2" cy="13.8" r="1.7"></circle>
+                                <path d="M10.25 1.5S8.3 3.45 8.3 3.47h2.4s2.48-.15 2.48 2.46v6.14m-2.93-6.63S8.3 3.49 8.3 3.47"></path>
+                              </g>
+                            </svg>
+                            <span class="label-align inner-underline commit-compare">Compare b350612..0a5f315</span>
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 17 17" class="icon">
+                              <path d="M11.34 10.96v1.1c0 .55-.45 1-1 1H4.83c-.55 0-1-.45-1-1V6.55c0-.55.41-1 .91-1h.91m1.24 4.34l5.92-5.93m-3.9-.02h3.92v3.92" fill="none" stroke="#9d9d9d" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"></path>
+                            </svg>
+                          </a>
+                        </li>
+                        <li>
+                          <a rel="noopener noreferrer" target="_blank" href="https://github.com/intest-tech/qaadmin/tree/master" id="ember70" class="commit-branch-url ember-view">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 17 17" class="icon">
+                              <circle cx="4.94" cy="2.83" r="1.83" fill="none" stroke="#9d9d9d" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"></circle><circle cx="11.78" cy="5.15" r="1.83" fill="none" stroke="#9d9d9d" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"></circle><circle cx="4.98" cy="14.17" r="1.83" fill="none" stroke="#9d9d9d" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"></circle>
+                              <path d="M11.78 6.99s.09 2.68-1.9 3.38c-1.76.62-2.92-.04-4.93 1.97V4.66" fill="none" stroke="#9d9d9d" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"></path>
+                            </svg>
+                            <span class="label-align inner-underline">Branch master</span>
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 17 17" class="icon">
+                              <path d="M11.34 10.96v1.1c0 .55-.45 1-1 1H4.83c-.55 0-1-.45-1-1V6.55c0-.55.41-1 .91-1h.91m1.24 4.34l5.92-5.93m-3.9-.02h3.92v3.92" fill="none" stroke="#9d9d9d" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"></path>
+                            </svg>
+                          </a>
+                        </li>
                       </ul>
 
-                      <div class="yx-test">
-                        <a href="/ityoung" id="ember74" class="ember-view">    <!---->
+                      <!--bar graph-->
+                      <div class="bar-graph" style="height=50px"></div>
 
-                      <span id="ember76" class="avatar-wrapper ember-view"><span class="avatar--small">
-                    <span class="pseudo-avatar" aria-hidden="true" data-initials="SY"></span>
-                      <img class="real-avatar" src="https://avatars0.githubusercontent.com/u/12296804?v=4?v=3&amp;s=18" srcset="https://avatars0.githubusercontent.com/u/12296804?v=4?v=3&amp;s=18 1x, https://avatars0.githubusercontent.com/u/12296804?v=4?v=3&amp;s=36 2x" alt="Shin Yang avatar">
-                  </span>
-                  <!----></span>
-                      <span class="label-align inner-underline">Shin Yang</span>
-                  </a>
-                      </div>
                     </div>
                   </div>
 
@@ -175,31 +183,29 @@
                   </a>  </h3>
 
                     <ul class="list-icon">
-                        <li title="Started September 24, 2018 19:58:48" class="commit-stopwatch">
-                          <svg viewBox="0 0 17.5 19.5" class="icon--m"><circle class="st0" cx="7.369" cy="2.173" r="1.583"></circle><path class="st0" d="M15.356 9.393c-.005.003-.011.001-.014-.004l-1.269-2.407c-.003-.005-.001-.011.004-.013l1.534-.799c.005-.003.011-.001.014.004l1.269 2.407c.003.005.001.011-.004.013l-1.534.799z"></path><circle class="st0" cx="7.369" cy="12.146" r="6.757"></circle><path class="st0" d="M6.982 8.256v3.834l2.542 1.708"></path></svg>
-                          <span class="label-align">
-                            Ran for <time datetime="PT53S">53 sec</time>
-                          </span>
-                        </li>
-
-                  <!---->
-                        <li title="Finished September 24, 2018 19:59:41" class="commit-calendar">
-                          <svg viewBox="0 0 15 15" class="icon"><path class="st0" d="M.861.5H14.22v14H.861zm13.252 4.061H1.182"></path><path class="st0" d="M4.639 7.913c.178-.166.475-.359.893-.359.734 0 2.093 1.164-.906 3.906h2.297m1.295-3.905h2.425s-1.4 1.693-1.4 3.906"></path></svg>
-                          <time class="label-align" datetime="September 24, 2018 19:59:41">11 minutes ago</time>
-                        </li>
+                      <li title="Started September 24, 2018 19:58:48" class="commit-stopwatch">
+                        <svg viewBox="0 0 17.5 19.5" class="icon--m"><circle class="st0" cx="7.369" cy="2.173" r="1.583"></circle><path class="st0" d="M15.356 9.393c-.005.003-.011.001-.014-.004l-1.269-2.407c-.003-.005-.001-.011.004-.013l1.534-.799c.005-.003.011-.001.014.004l1.269 2.407c.003.005.001.011-.004.013l-1.534.799z"></path><circle class="st0" cx="7.369" cy="12.146" r="6.757"></circle><path class="st0" d="M6.982 8.256v3.834l2.542 1.708"></path></svg>
+                        <span class="label-align">
+                          Ran for <time datetime="PT53S">53 sec</time>
+                        </span>
+                      </li>
+                      <li title="Finished September 24, 2018 19:59:41" class="commit-calendar">
+                        <svg viewBox="0 0 15 15" class="icon"><path class="st0" d="M.861.5H14.22v14H.861zm13.252 4.061H1.182"></path><path class="st0" d="M4.639 7.913c.178-.166.475-.359.893-.359.734 0 2.093 1.164-.906 3.906h2.297m1.295-3.905h2.425s-1.4 1.693-1.4 3.906"></path></svg>
+                        <time class="label-align" datetime="September 24, 2018 19:59:41">11 minutes ago</time>
+                      </li>
                     </ul>
                   </div>
 
-                  <div class="build-tools">
-                      <div id="ember79" class="repo-main-tools ember-view">    <div class="action-button-container">
-                        <button class="action-button--restart" aria-label="Restart build" type="button" data-ember-action="" data-ember-action-100="100">
-                          <!---->
-                          <svg viewBox="0 0 15 15" class="icon"><path d="M14.5 5.768l-2.07 2.506M9.549 6.451l2.881 1.823m-.016-.395c0-3.873-2.705-6.379-5.981-6.379a5.933 5.933 0 1 0 4.446 9.861"></path></svg>
-                          <span class="label-align">Restart build</span>
-                        </button>
+                    <div class="build-tools">
+                      <div id="ember79" class="repo-main-tools ember-view">
+                        <div class="action-button-container">
+                          <button class="action-button--restart" aria-label="Restart build" type="button" data-ember-action="" data-ember-action-100="100">
+                            <svg viewBox="0 0 15 15" class="icon"><path d="M14.5 5.768l-2.07 2.506M9.549 6.451l2.881 1.823m-.016-.395c0-3.873-2.705-6.379-5.981-6.379a5.933 5.933 0 1 0 4.446 9.861"></path></svg>
+                            <span class="label-align">Restart build</span>
+                          </button>
+                        </div>
                       </div>
-                  <!----></div>
-                  </div>
+                    </div>
                   </section>
                   <!--line-->
                   <div id="ember418" class="ember-view"><!----><!----></div>
@@ -219,29 +225,23 @@
 
                     </div>
                   </div>
-                  <div id="ember421" class="job-log ember-view">
-                    <div id="ember432" class="ember-view">
-                      <section id="log-container" class="log">
-                        <div class="panel-group" id="accordion">
-                          <div class="panel panel-default" v-for="(x, index) in tracebacks">
-                            <div class="panel-heading">
-                              <h4 class="panel-title">
-                                <a data-toggle="collapse" data-parent="#accordion"
-                                   :href="'#collapse'+index">
-                                  {{x.test_case}}
-                                </a>
-                              </h4>
-                            </div>
-                            <div :id="'collapse'+index" class="panel-collapse collapse">
-                              <div class="panel-body">
-                                {{x.note}}
-                              </div>
-                            </div>
+                  <section id="log-container" class="log">
+                    <div class="panel-group" id="accordion">
+                      <div class="panel panel-default" v-for="(x, index) in tracebacks">
+                        <div class="panel-heading" data-toggle="collapse" data-parent="#accordion"
+                             :href="'#collapse'+index">
+                          <h4 class="panel-title">
+                            {{x.test_case}}
+                          </h4>
+                        </div>
+                        <div :id="'collapse'+index" class="panel-collapse collapse">
+                          <div class="panel-body">
+                            <pre>{{x.note}}</pre>
                           </div>
                         </div>
-                      </section>
+                      </div>
                     </div>
-                  </div>
+                  </section>
                 </div>
               </div>
             </div>
@@ -264,11 +264,11 @@ $(function(){
     app.data=res.data
     app.tracebacks = res.data.details
     showChart(
-      document.querySelector('.yx-test'),
-      [app.data.success,
-      app.data.failures,
-      app.data.errors,
-      app.data.skipped]
+      document.querySelector('.bar-graph'),
+      [app.data.success || '-',
+      app.data.failures || '-',
+      app.data.errors || '-',
+      app.data.skipped || '-']
     )
   })
 });
