--- a/static/css/qaadmin.css
+++ b/static/css/qaadmin.css
@@ -112,3 +112,7 @@
 .build-tiles>.errored:hover{background-color:#db4545}
 .build-tiles>.errored:hover .status-icon circle,.build-tiles>.errored:hover .status-icon ellipse,.build-tiles>.errored:hover .status-icon line,.build-tiles>.errored:hover .status-icon path,.build-tiles>.errored:hover .status-icon polygon,.build-tiles>.errored:hover .status-icon polyline,.build-tiles>.errored:hover .status-icon rect{fill:none;stroke:#fff}
 .build-tiles>.errored:hover .status-icon *{stroke-width:2px}
+
+.bar-graph {
+    height: 50px;
+}
