--- a/templates/job.html
+++ b/templates/job.html
@@ -15,12 +15,9 @@
       <div id="main" class="main" role="main">
       <article class="repo-header">
         <header class="name">
-          <div class="ember-tooltip-or-popover-target ember-tooltip-or-popover-element-attached-bottom ember-tooltip-or-popover-element-attached-center ember-tooltip-or-popover-target-attached-top ember-tooltip-or-popover-target-attached-center"
-             aria-describedby="ember380" tabindex="0">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" alt="Public repository"
-               class="icon public">
-              <g fill="none" stroke="#9ea3a8" stroke-linecap="round" stroke-linejoin="round"
-                 stroke-miterlimit="10">
+          <div class="ember-tooltip-or-popover-target ember-tooltip-or-popover-target-attached-top ember-tooltip-or-popover-target-attached-center" tabindex="0">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" alt="Public repository" class="icon public">
+              <g fill="none" stroke="#9ea3a8" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10">
                 <path d="M7.089 13.343h6.434L13.524 1H2.176v12.343H4.46M2.176 10.543h11.348"></path>
                 <path d="M4.46 12.239v2.756l1.394-1.285 1.235 1.236v-2.707zM4.199 1v9.543M5.635 8.737h.63M5.635 6.782h.63M5.635 4.828h.63M5.635 2.873h.63"></path>
               </g>
@@ -37,7 +34,7 @@
             <nav id="testtype_nav" class="qaadmin-nav">
               <ul>
                 <li id="tab_current" class="active">
-                  <a href="/intest-tech/qaadmin" class="active">
+                  <a :href="'/project/gt-server/job/'+job_id" class="active">
                     Current
                   </a></li>
                 <li id="tab_branches">
@@ -50,36 +47,16 @@
                 <li id="tab_pull_requests">
                   <a href="/intest-tech/qaadmin/pull_requests"> Pull Requests</a>
                 </li>
-                <li id="tab_build">
-                  <svg viewBox="0 0 15 15" class="tab-arrow">
-                    <path fill="none" stroke="#9d9d9d"
-                        d="M4.32.5l6.247 6.942L4.32 14.5"></path>
-                  </svg>
-                  <a href="/intest-tech/qaadmin/builds/431048533"> Build #9
-                  </a></li>
-                <li id="tab_job">
-                  <a href="/intest-tech/qaadmin/jobs/431048534"> Job #9.1
-                  </a></li>
-                <li id="tab_settings">
-                  <a href="/intest-tech/qaadmin/settings"> Settings
-                  </a></li>
-                <li id="tab_requests">
-                  <a href="/intest-tech/qaadmin/requests"> Requests
-                  </a></li>
-                <li id="tab_caches">
-                  <a href="/intest-tech/qaadmin/caches">
-                    Caches
-                  </a></li>
               </ul>
             </nav>
             <nav class="option-button">
               <button class="option-display" title="Show more options" type="button">
                 <span class="label-align">More options</span>
                 <span class="option-tofu">
-                    <svg xmlns="http://www.w3.org/2000/svg"
-                         viewBox="-503.7 379.2 17 10"
-                         class="icon-tofu">
-                        <path d="M-487.3 380.4H-503c-.4 0-.6-.3-.6-.6s.3-.6.6-.6h15.7c.4 0 .6.3.6.6s-.3.6-.6.6zm0 4.4H-503c-.4 0-.6-.3-.6-.6s.3-.6.6-.6h15.7c.4 0 .6.3.6.6s-.3.6-.6.6zm0 4.4H-503c-.4 0-.6-.3-.6-.6s.3-.6.6-.6h15.7c.4 0 .6.3.6.6s-.3.6-.6.6z"></path></svg></span>
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="-503.7 379.2 17 10" class="icon-tofu">
+                    <path d="M-487.3 380.4H-503c-.4 0-.6-.3-.6-.6s.3-.6.6-.6h15.7c.4 0 .6.3.6.6s-.3.6-.6.6zm0 4.4H-503c-.4 0-.6-.3-.6-.6s.3-.6.6-.6h15.7c.4 0 .6.3.6.6s-.3.6-.6.6zm0 4.4H-503c-.4 0-.6-.3-.6-.6s.3-.6.6-.6h15.7c.4 0 .6.3.6.6s-.3.6-.6.6z"></path>
+                  </svg>
+                </span>
               </button>
               <ul class="option-dropdown">
                 <li>
@@ -120,18 +97,13 @@
               <div class="commit-info">
                 <ul class="list-icon">
                   <li>
-                    <a rel="noopener noreferrer" target="_blank" href="https://github.com/intest-tech/qaadmin/tree/master" id="ember70" class="commit-branch-url ember-view">
-                      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 17 17" class="icon">
-                        <circle cx="4.94" cy="2.83" r="1.83" fill="none" stroke="#9d9d9d" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"></circle>
-                        <circle cx="11.78" cy="5.15" r="1.83" fill="none" stroke="#9d9d9d" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"></circle>
-                        <circle cx="4.98" cy="14.17" r="1.83" fill="none" stroke="#9d9d9d" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"></circle>
-                        <path d="M11.78 6.99s.09 2.68-1.9 3.38c-1.76.62-2.92-.04-4.93 1.97V4.66" fill="none" stroke="#9d9d9d" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"></path>
-                      </svg>
-                      <span class="label-align inner-underline">Total {{data.total}} cases</span>
-                      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 17 17" class="icon">
-                        <path d="M11.34 10.96v1.1c0 .55-.45 1-1 1H4.83c-.55 0-1-.45-1-1V6.55c0-.55.41-1 .91-1h.91m1.24 4.34l5.92-5.93m-3.9-.02h3.92v3.92" fill="none" stroke="#9d9d9d" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"></path>
-                      </svg>
-                    </a>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 17 17" class="icon">
+                      <circle cx="4.94" cy="2.83" r="1.83" fill="none" stroke="#9d9d9d" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"></circle>
+                      <circle cx="11.78" cy="5.15" r="1.83" fill="none" stroke="#9d9d9d" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"></circle>
+                      <circle cx="4.98" cy="14.17" r="1.83" fill="none" stroke="#9d9d9d" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"></circle>
+                      <path d="M11.78 6.99s.09 2.68-1.9 3.38c-1.76.62-2.92-.04-4.93 1.97V4.66" fill="none" stroke="#9d9d9d" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"></path>
+                    </svg>
+                    <span class="label-align inner-underline">Total {{data.total}} cases</span>
                   </li>
                   <li title="Started September 24, 2018 19:58:48" class="commit-stopwatch">
                     <svg viewBox="0 0 17.5 19.5" class="icon--m">
@@ -141,7 +113,8 @@
                       <path d="M6.982 8.256v3.834l2.542 1.708" class="st0"></path>
                     </svg>
                     <span class="label-align">
-                      Ran for <time datetime="PT53S">{{data.run_time}} sec</time></span>
+                      Ran for <time datetime="PT53S">{{data.run_time}} sec</time>
+                    </span>
                   </li>
                 </ul>
                 <div class="bar-graph"></div>
@@ -151,34 +124,23 @@
               <div class="build-info">
                 <!--bar graph-->
                 <ul class="list-icon">
-
                   <li>
-                    <a rel="noopener noreferrer" target="_blank" href="https://github.com/intest-tech/qaadmin/commit/0a5f315aace3efbd5bd9ee3b65dc52e9cabb052c" id="ember66" class="ember-view">
-                      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 17 17" class="icon">
-                        <circle cx="8.51" cy="8.5" r="3.5" fill="none" stroke="#9d9d9d" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"></circle>
-                        <path d="M16.5 8.5h-4.49m-7 0H.5" fill="none" stroke="#9d9d9d" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"></path>
-                      </svg>
-                      <span class="label-align inner-underline commit-commit">Stage {{data.stage}}</span>
-                      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 17 17" class="icon">
-                        <path d="M11.34 10.96v1.1c0 .55-.45 1-1 1H4.83c-.55 0-1-.45-1-1V6.55c0-.55.41-1 .91-1h.91m1.24 4.34l5.92-5.93m-3.9-.02h3.92v3.92" fill="none" stroke="#9d9d9d" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"></path>
-                      </svg>
-                    </a>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 17 17" class="icon">
+                      <circle cx="8.51" cy="8.5" r="3.5" fill="none" stroke="#9d9d9d" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"></circle>
+                      <path d="M16.5 8.5h-4.49m-7 0H.5" fill="none" stroke="#9d9d9d" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"></path>
+                    </svg>
+                    <span class="label-align inner-underline commit-commit">Stage {{data.stage}}</span>
                   </li>
                   <li>
-                    <a rel="noopener noreferrer" target="_blank" href="https://github.com/intest-tech/qaadmin/compare/b350612bd471...0a5f315aace3" id="ember68" class="ember-view">
-                      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 17 17" class="icon">
-                        <circle cx="3.8" cy="3.2" r="1.7" fill="none" stroke="#9d9d9d" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"></circle>
-                        <path d="M6.75 15.5s1.95-1.95 1.95-1.98H6.3s-2.48.15-2.48-2.46V4.92m2.93 6.64s1.95 1.95 1.95 1.97" fill="none" stroke="#9d9d9d" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"></path>
-                        <g fill="none" stroke="#9d9d9d" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10">
-                          <circle cx="13.2" cy="13.8" r="1.7"></circle>
-                          <path d="M10.25 1.5S8.3 3.45 8.3 3.47h2.4s2.48-.15 2.48 2.46v6.14m-2.93-6.63S8.3 3.49 8.3 3.47"></path>
-                        </g>
-                      </svg>
-                      <span class="label-align inner-underline commit-compare">Tag {{data.tag}}</span>
-                      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 17 17" class="icon">
-                        <path d="M11.34 10.96v1.1c0 .55-.45 1-1 1H4.83c-.55 0-1-.45-1-1V6.55c0-.55.41-1 .91-1h.91m1.24 4.34l5.92-5.93m-3.9-.02h3.92v3.92" fill="none" stroke="#9d9d9d" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"></path>
-                      </svg>
-                    </a>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 17 17" class="icon">
+                      <circle cx="3.8" cy="3.2" r="1.7" fill="none" stroke="#9d9d9d" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"></circle>
+                      <path d="M6.75 15.5s1.95-1.95 1.95-1.98H6.3s-2.48.15-2.48-2.46V4.92m2.93 6.64s1.95 1.95 1.95 1.97" fill="none" stroke="#9d9d9d" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"></path>
+                      <g fill="none" stroke="#9d9d9d" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10">
+                        <circle cx="13.2" cy="13.8" r="1.7"></circle>
+                        <path d="M10.25 1.5S8.3 3.45 8.3 3.47h2.4s2.48-.15 2.48 2.46v6.14m-2.93-6.63S8.3 3.49 8.3 3.47"></path>
+                      </g>
+                    </svg>
+                    <span class="label-align inner-underline commit-compare">Tag {{data.tag}}</span>
                   </li>
                   <li title="Finished September 24, 2018 19:59:41" class="commit-calendar">
                     <svg viewBox="0 0 15 15" class="icon">
@@ -194,7 +156,9 @@
                 <div class="repo-main-tools">
                   <div class="action-button-container">
                     <button class="action-button--restart" aria-label="Restart build" type="button" data-ember-action="" data-ember-action-100="100">
-                      <svg viewBox="0 0 15 15" class="icon"><path d="M14.5 5.768l-2.07 2.506M9.549 6.451l2.881 1.823m-.016-.395c0-3.873-2.705-6.379-5.981-6.379a5.933 5.933 0 1 0 4.446 9.861"></path></svg>
+                      <svg viewBox="0 0 15 15" class="icon">
+                        <path d="M14.5 5.768l-2.07 2.506M9.549 6.451l2.881 1.823m-.016-.395c0-3.873-2.705-6.379-5.981-6.379a5.933 5.933 0 1 0 4.446 9.861"></path>
+                      </svg>
                       <span class="label-align">Restart build</span>
                     </button>
                   </div>
