[WIP]update: clean up useless code.

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,9 +22,9 @@
 <div class="wrapper">
     <!--导航栏-->
     <header class="top">
-        <div class="topbar  ">
-            <h1 id="logo" class="logo"><a href="/" id="ember365" class="ember-view">QA Admin</a></h1>
-            <div id="ember366" class="ember-view">
+        <div class="topbar">
+            <!--<h1>QA Admin</h1>-->
+            <h1 id="logo" class="logo"><a href="/">QA Admin</a></h1>
                 <div class="navigation-toggle">
                     <button class="tofuburger no-button" type="button" data-ember-action=""
                             data-ember-action-367="367">
@@ -33,9 +33,7 @@
                         </svg>
                     </button>
                 </div>
-            </div>
-            <div id="ember368" class="ember-view">
-                <div id="ember369" class="broadcast ember-view"><span class="icon-broadcast  "
+                <div class="broadcast"><span class="icon-broadcast  "
                                                                       title="broadcasts" data-ember-action=""
                                                                       data-ember-action-370="370">
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 15 21.625"><g class="tower-path"><circle class="path" cx="7.503"
@@ -50,12 +48,9 @@
                     <!---->
 </span>
                 </div>
-
                 <ul class="broadcasts ">
                     <li><p>There are no broadcasts</p></li>
                 </ul>
-
-            </div>
             <nav id="navigation" class="navigation ">
                 <ul>
                     <li>
