--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
         {{script}}
     {% endblock %}
     <link rel="stylesheet" href="/static/css/opensource/travis-fonts.css">
+    <link rel="stylesheet" href="/static/css/font-awesome/css/all.css">
     <link rel="stylesheet" href="/static/css/travis.css">
     <link rel="stylesheet" href="/static/css/qaadmin.css">
     <link rel="mask-icon" href="https://cdn.travis-ci.org/images/favicon-c566132d45ab1a9bcae64d8d90e4378a.svg"
